rag-service/k8s/service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-service-svc
  namespace: my-app
spec:
  selector:
    app: rag-service
  ports:
  - protocol: TCP
    port: 5050
    targetPort: 5050
